--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -115,6 +115,18 @@ section.success {
     .scroll-top .btn:focus {
       outline: none; }
 
+.brand-name{
+    display: block;
+    font-size: 1.5rem;
+    line-height: initial;
+}
+.brand-title{
+    display: block;
+    font-size: 0.75rem;
+    font-weight: normal;
+    color: #1798BC;
+}
+
 #mainNav {
   font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 700;
@@ -126,6 +138,16 @@ section.success {
   #mainNav .navbar-brand {
     font-size: 1.2rem;
     color: white; }
+    #mainNav .navbar-brand > .brand-name{
+      font-size: 1.2rem;
+      -webkit-transition: all 0.3s;
+      -moz-transition: all 0.3s;
+      transition: all 0.3s; }
+    #mainNav .navbar-brand > .brand-title{
+      font-size: 0.6rem;
+      -webkit-transition: all 0.3s;
+      -moz-transition: all 0.3s;
+      transition: all 0.3s; }
     #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
       color: white; }
   #mainNav .navbar-nav {
@@ -150,8 +172,8 @@ section.success {
 
 @media (min-width: 992px) {
   #mainNav {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
     -moz-transition: padding-top 0.3s, padding-bottom 0.3s;
     transition: padding-top 0.3s, padding-bottom 0.3s; }
@@ -160,6 +182,10 @@ section.success {
       -webkit-transition: all 0.3s;
       -moz-transition: all 0.3s;
       transition: all 0.3s; }
+    #mainNav .navbar-brand > .brand-name{
+      font-size: 1.75rem; }
+    #mainNav .navbar-brand > .brand-title{
+      font-size: 0.75rem; }
     #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
       color: white;
       border-radius: 3px;
@@ -172,6 +198,16 @@ section.success {
     padding-bottom: 4px; }
     #mainNav.navbar-shrink .navbar-brand {
       font-size: 1.5em; } }
+    #mainNav.navbar-shrink .navbar-brand > .brand-name{
+      font-size: 1.2rem;
+      -webkit-transition: all 0.3s;
+      -moz-transition: all 0.3s;
+      transition: all 0.3s; }
+    #mainNav.navbar-shrink .navbar-brand > .brand-title{
+      font-size: 0.6rem;
+      -webkit-transition: all 0.3s;
+      -moz-transition: all 0.3s;
+      transition: all 0.3s; }
 
 header.masthead {
   height: 100vh;
@@ -492,21 +528,16 @@ footer {
   border-color: #ccc;
 }
 
-
-.scroll-down {
-  position: fixed;
-  z-index: 1049;
-  right: 2%;
-  bottom: 2%;
-  width: 50px;
-  height: 50px; }
-  .scroll-down .btn {
-    font-size: 16px;
-    line-height: 28px;
-    width: 50px;
-    height: 50px;
+.social-links {
     text-align: center;
-    border-radius: 100%; }
+}
+
+.navbar{
+    padding: .25rem 1rem
+}
+.navbar-brand{
+    margin-right: 0;
+}
 
 .container {
     padding-right: 15px;
@@ -542,31 +573,4 @@ ul,
 dl {
   margin-top: 0;
   margin-bottom: 0.5rem;
-}
-
-.navbar{
-    padding: .25rem 1rem
-}
-.navbar-brand{
-    margin-right: 0;
-}
-
-.brand-name{
-    display: block;
-    font-size: 1.5rem;
-    line-height: initial;
-}
-.brand-title{
-    display: block;
-    font-size: 0.75rem;
-    font-weight: normal;
-    color: #1798BC;
-}
-
-.social-links {
-    text-align: center;
-}
-
-.embed-responsive-1by1 {
-  padding-bottom: percentage((1 / 1)); // 100%;
 }
