--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -8,10 +8,10 @@ body {
   overflow-x: hidden; }
 
 p {
-  font-size: 20px; }
+  font-size: 16px; }
 
 p.small {
-  font-size: 16px; }
+  font-size: 14px; }
 
 a,
 a.active,
@@ -27,10 +27,12 @@ h3,
 h4,
 h5,
 h6 {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase; }
+
+
 
 hr.divider-light,
 hr.divider-primary {
@@ -295,8 +297,7 @@ header.masthead {
     border: 0;
     border-radius: 0; }
     .portfolio-modal .modal-dialog .modal-content h2 {
-      font-size: 3em;
-      margin: 0; }
+      font-size: 3em; }
 
 .portfolio-modal .close-modal {
   position: absolute;
