--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -571,5 +571,12 @@ ol,
 ul,
 dl {
   margin-top: 0;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem; }
+
+.center-list {
+  list-style-position: inside;
+  margin: 0 auto 1rem;
+  position: relative;
+  text-align: left;
+  width: fit-content;
 }
