--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -8,10 +8,15 @@ body {
   overflow-x: hidden; }
 
 p {
-  font-size: 16px; }
+  font-size: 16px; 
+  margin-bottom: 1.25rem;
+}
 
-p.small {
-  font-size: 14px; }
+ol,
+ul,
+dl {
+  margin-top: 0;
+  margin-bottom: 0.5rem; }
 
 a,
 a.active,
@@ -296,9 +301,14 @@ header.masthead {
   -webkit-box-shadow: none;
   box-shadow: none; }
   .portfolio-modal .modal-dialog .modal-content {
+    margin: 10px;
     padding: 100px 0;
     border: 0;
     border-radius: 0; }
+    @media (min-width: 576px) {
+    .portfolio-modal .modal-dialog .modal-content {
+        margin: 35px;
+    }}
     .portfolio-modal .modal-dialog .modal-content h2 {
       font-size: 3em; }
 
@@ -530,6 +540,12 @@ footer {
   border-color: #ccc;
 }
 
+.btn-modal-close {
+  position: relative;
+  top: 35px;
+  font-size: 1.25rem;
+}
+
 .social-links {
     text-align: center;
 }
@@ -570,15 +586,14 @@ footer {
   bottom: 0px;
 }
 
-ol,
-ul,
-dl {
-  margin-top: 0;
-  margin-bottom: 0.5rem; }
+.tool-details{
+  font-style: italic;
+  margin-bottom: 0.25rem;
+}
 
 .center-list {
   list-style-position: inside;
-  margin: 0 auto 1rem;
+  margin: 0 auto 1.25rem;
   position: relative;
   text-align: left;
   width: fit-content;
@@ -594,17 +609,17 @@ dl {
 @media (min-width: 392px) {
 .img-profile {
     margin-bottom: 2px;
-}
+}}
 @media (min-width: 576px) {
 .img-profile {
     margin-right: 20px;
     margin-bottom: 20px;
-}
+}}
 @media (min-width: 768px) {
 .img-profile {
     width: 38%;
-}
+}}
 @media (min-width: 992px) {
 .img-profile {
     width: 35%;
-}
+}}
