--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -583,12 +583,17 @@ footer {
 }}
 @media (min-width: 768px) {
 .img-profile {
-    width: 38%;
+    width: 42%;
 }}
 @media (min-width: 992px) {
 .img-profile {
     width: 38%;
 }}
+@media (min-width: 1200px) {
+.img-profile {
+    width: 40%;
+}}
+
 
 
 .header-content {
